--- a/impact2021-security-workshop_webapp/assets/root.yml
+++ b/impact2021-security-workshop_webapp/assets/root.yml
@@ -2,17 +2,17 @@
 
 - !policy
   id: devapp
+  body:
+    - !group secret-users
+    - !var db_uname
+    - !var db_pass
 
-  - !group secret-users
-  - !var db_uname
-  - !var db_pass
-
-  - !permit
-    role: !group secret-users
-    privileges: [ read, execute ]
-    resources:
-      - !var db_uname
-      - !var db_pass
+    - !permit
+      role: !group secret-users
+      privileges: [ read, execute ]
+      resources:
+        - !var db_uname
+        - !var db_pass
 
 - !grant
   role: !group devapp/secret-users
