--- a/impact2021-security-workshop_webapp/assets/root.yml
+++ b/impact2021-security-workshop_webapp/assets/root.yml
@@ -4,15 +4,15 @@
   id: devapp
   body:
     - !group secret-users
-    - !var db_uname
-    - !var db_pass
+    - !variable db_uname
+    - !variable db_pass
 
     - !permit
       role: !group secret-users
       privileges: [ read, execute ]
       resources:
-        - !var db_uname
-        - !var db_pass
+        - !variable db_uname
+        - !variable db_pass
 
 - !grant
   role: !group devapp/secret-users
